--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,13 @@
+@article{greggor2021pre,
+  title={Pre-release training, predator interactions and evidence for persistence of anti-predator behavior in reintroducedalal{\=a}, Hawaiian crow},
+  author={Greggor, Alison L and Masuda, Bryce and Gaudioso-Levita, Jacqueline M and Nelson, Jay T and White, Thomas H and Shier, Debra M and Farabaugh, Susan M and Swaisgood, Ronald R},
+  journal={Global Ecology and Conservation},
+  volume={28},
+  pages={e01658},
+  year={2021},
+  publisher={Elsevier}
+}
+
 @article{howard1960innate,
   title={Innate and environmental dispersal of individual vertebrates},
   author={Howard, Walter E},
