--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,22 @@
+@incollection{peterson2011ecological,
+  title={Ecological niches and geographic distributions (MPB-49)},
+  author={Peterson, A Townsend and Sober{\'o}n, Jorge and Pearson, Richard G and Anderson, Robert P and Mart{\'\i}nez-Meyer, Enrique and Nakamura, Miguel and Ara{\'u}jo, Miguel B},
+  booktitle={Ecological Niches and Geographic Distributions (MPB-49)},
+  year={2011},
+  publisher={Princeton University Press}
+}
+
+@article{grinnell1917niche,
+  title={The niche-relationships of the California Thrasher},
+  author={Grinnell, Joseph},
+  journal={The Auk},
+  volume={34},
+  number={4},
+  pages={427--433},
+  year={1917},
+  publisher={JSTOR}
+}
+
 @article{greggor2021pre,
   title={Pre-release training, predator interactions and evidence for persistence of anti-predator behavior in reintroducedalal{\=a}, Hawaiian crow},
   author={Greggor, Alison L and Masuda, Bryce and Gaudioso-Levita, Jacqueline M and Nelson, Jay T and White, Thomas H and Shier, Debra M and Farabaugh, Susan M and Swaisgood, Ronald R},
