--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -339,6 +339,27 @@ year = {2010}
   year={2021}
 }
 
+@article{mery2013natural,
+  title={Natural variation in learning and memory},
+  author={Mery, Frederic},
+  journal={Current opinion in neurobiology},
+  volume={23},
+  number={1},
+  pages={52--56},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{thornton2022role,
+  title={The role of natural history in animal cognition},
+  author={Thornton, Alex and Truskanov, Noa},
+  journal={Current Opinion in Behavioral Sciences},
+  volume={46},
+  pages={101154},
+  year={2022},
+  publisher={Elsevier}
+}
+
 @article{lee2021animal,
   title={Animal Cognition in an Urbanised World},
   author={Lee, Victoria E and Thornton, Alex},
@@ -9298,6 +9319,28 @@ number of affiliative events with one individual / total number of affiliative e
 	month = mar,
 	year = {2006},
 	pages = {512--515}
+}
+
+@article{aplin2015experimentally,
+  title={Experimentally induced innovations lead to persistent culture via conformity in wild birds},
+  author={Aplin, Lucy M and Farine, Damien R and Morand-Ferron, Julie and Cockburn, Andrew and Thornton, Alex and Sheldon, Ben C},
+  journal={Nature},
+  volume={518},
+  number={7540},
+  pages={538--541},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{lea2020behavioral,
+  title={Behavioral flexibility: A review, a model, and some exploratory tests},
+  author={Lea, Stephen EG and Chow, Pizza KY and Leaver, Lisa A and McLaren, Ian PL},
+  journal={Learning \& Behavior},
+  volume={48},
+  number={1},
+  pages={173--187},
+  year={2020},
+  publisher={Springer}
 }
 
 @article{ellis_stress_2006,
